// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcSubmenu > should not render when passing an empty array to submenu 1`] = `<!--v-if-->`;

exports[`EcSubmenu > should not render when passing null to submenu 1`] = `<!--v-if-->`;

exports[`EcSubmenu > should render properly if hasHeaderGap prop is set to false 1`] = `
<div
  class="ec-submenu"
  data-test="ec-submenu"
>
  <div
    class="ec-submenu__header-container"
  >
    <ul
      class="ec-submenu__header ec-submenu__header--no-gap"
    >
      
      <li
        class="ec-submenu__header-item ec-submenu__header-item--is-active"
        data-test="ec-submenu__header-item"
      >
        <a
          class="ec-submenu__header-title"
          data-test="ec-submenu__header-title-0"
          href="#"
        >
          Submitted Requests (30)
        </a>
      </li>
      <li
        class="ec-submenu__header-item"
        data-test="ec-submenu__header-item"
      >
        <ec-stub
          class="ec-submenu__header-title"
          data-test="ec-submenu__header-title-1 ec-stub router-link-stub"
          to="/submitted"
        >
          
          Repayments (30)
          
        </ec-stub>
      </li>
      <li
        class="ec-submenu__header-item"
        data-test="ec-submenu__header-item"
      >
        <ec-stub
          class="ec-submenu__header-title"
          data-test="ec-submenu__header-title-2 ec-stub router-link-stub"
          to="/submitted"
        >
          
          Another Request (30)
          
        </ec-stub>
      </li>
      
    </ul>
  </div>
  <main
    class="ec-submenu__main"
  >
    <transition-group-stub
      appear="false"
      css="true"
      name="ec-submenu__fade"
      persisted="false"
      tag="div"
    >
      
      <div
        data-test="ec-submenu__panel-0"
      >
        
        
      </div>
      <div
        data-test="ec-submenu__panel-1"
        style="display: none;"
      >
        
        
      </div>
      <div
        data-test="ec-submenu__panel-2"
        style="display: none;"
      >
        
        
      </div>
      
    </transition-group-stub>
  </main>
</div>
`;

exports[`EcSubmenu > should render properly if isFullWidth prop is set 1`] = `
<div
  class="ec-submenu"
  data-test="ec-submenu"
>
  <div
    class="ec-submenu__header-container"
  >
    <ul
      class="ec-submenu__header"
    >
      
      <li
        class="ec-submenu__header-item ec-submenu__header-item--is-full-width ec-submenu__header-item--is-active"
        data-test="ec-submenu__header-item"
      >
        <a
          class="ec-submenu__header-title"
          data-test="ec-submenu__header-title-0"
          href="#"
        >
          Submitted Requests (30)
        </a>
      </li>
      <li
        class="ec-submenu__header-item ec-submenu__header-item--is-full-width"
        data-test="ec-submenu__header-item"
      >
        <ec-stub
          class="ec-submenu__header-title"
          data-test="ec-submenu__header-title-1 ec-stub router-link-stub"
          to="/submitted"
        >
          
          Repayments (30)
          
        </ec-stub>
      </li>
      <li
        class="ec-submenu__header-item ec-submenu__header-item--is-full-width"
        data-test="ec-submenu__header-item"
      >
        <ec-stub
          class="ec-submenu__header-title"
          data-test="ec-submenu__header-title-2 ec-stub router-link-stub"
          to="/submitted"
        >
          
          Another Request (30)
          
        </ec-stub>
      </li>
      
    </ul>
  </div>
  <main
    class="ec-submenu__main"
  >
    <transition-group-stub
      appear="false"
      css="true"
      name="ec-submenu__fade"
      persisted="false"
      tag="div"
    >
      
      <div
        data-test="ec-submenu__panel-0"
      >
        
        <p>
          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus, tempora esse? Fugit minus consequatur harum culpa sed laborum nulla expedita molestias, quia cupiditate commodi repudiandae labore dolore dolor. Eum sapiente repellendus tempora tenetur accusantium, molestias hic adipisci aspernatur, sed possimus explicabo culpa quas laudantium?
        </p>
        
      </div>
      <div
        data-test="ec-submenu__panel-1"
        style="display: none;"
      >
        
        <p>
          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus, tempora esse? Fugit minus consequatur harum culpa sed laborum nulla expedita molestias, quia cupiditate commodi repudiandae labore dolore dolor. Eum sapiente repellendus tempora tenetur accusantium, molestias hic adipisci aspernatur, sed possimus explicabo culpa quas laudantium?
        </p>
        
      </div>
      <div
        data-test="ec-submenu__panel-2"
        style="display: none;"
      >
        
        <p>
          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus, tempora esse? Fugit minus consequatur harum culpa sed laborum nulla expedita molestias, quia cupiditate commodi repudiandae labore dolore dolor. Eum sapiente repellendus tempora tenetur accusantium, molestias hic adipisci aspernatur, sed possimus explicabo culpa quas laudantium?
        </p>
        
      </div>
      
    </transition-group-stub>
  </main>
</div>
`;

exports[`EcSubmenu > should render the second panel if the second tab is clicked 1`] = `
<div
  class="ec-submenu"
  data-test="ec-submenu"
>
  <div
    class="ec-submenu__header-container"
  >
    <ul
      class="ec-submenu__header"
    >
      
      <li
        class="ec-submenu__header-item"
        data-test="ec-submenu__header-item"
      >
        <a
          class="ec-submenu__header-title"
          data-test="ec-submenu__header-title-0"
          href="#"
        >
          Submitted Requests (30)
        </a>
      </li>
      <li
        class="ec-submenu__header-item ec-submenu__header-item--is-active"
        data-test="ec-submenu__header-item"
      >
        <ec-stub
          class="ec-submenu__header-title"
          data-test="ec-submenu__header-title-1 ec-stub router-link-stub"
          to="/submitted"
        >
          
          Repayments (30)
          
        </ec-stub>
      </li>
      <li
        class="ec-submenu__header-item"
        data-test="ec-submenu__header-item"
      >
        <ec-stub
          class="ec-submenu__header-title"
          data-test="ec-submenu__header-title-2 ec-stub router-link-stub"
          to="/submitted"
        >
          
          Another Request (30)
          
        </ec-stub>
      </li>
      
    </ul>
  </div>
  <main
    class="ec-submenu__main"
  >
    <transition-group-stub
      appear="false"
      css="true"
      name="ec-submenu__fade"
      persisted="false"
      tag="div"
    >
      
      <div
        data-test="ec-submenu__panel-0"
        style="display: none;"
      >
        
        
      </div>
      <div
        data-test="ec-submenu__panel-1"
        style=""
      >
        
        
      </div>
      <div
        data-test="ec-submenu__panel-2"
        style="display: none;"
      >
        
        
      </div>
      
    </transition-group-stub>
  </main>
</div>
`;

exports[`EcSubmenu > should render with custom attributes 1`] = `
<div
  class="ec-submenu my-class"
  data-test="my-data-test ec-submenu"
  id="test-id"
>
  <div
    class="ec-submenu__header-container"
  >
    <ul
      class="ec-submenu__header"
    >
      
      <li
        class="ec-submenu__header-item ec-submenu__header-item--is-active"
        data-test="ec-submenu__header-item"
      >
        <a
          class="ec-submenu__header-title"
          data-test="ec-submenu__header-title-0"
          href="#"
        >
          Submitted Requests (30)
        </a>
      </li>
      <li
        class="ec-submenu__header-item"
        data-test="ec-submenu__header-item"
      >
        <ec-stub
          class="ec-submenu__header-title"
          data-test="ec-submenu__header-title-1 ec-stub router-link-stub"
          to="/submitted"
        >
          
          Repayments (30)
          
        </ec-stub>
      </li>
      <li
        class="ec-submenu__header-item"
        data-test="ec-submenu__header-item"
      >
        <ec-stub
          class="ec-submenu__header-title"
          data-test="ec-submenu__header-title-2 ec-stub router-link-stub"
          to="/submitted"
        >
          
          Another Request (30)
          
        </ec-stub>
      </li>
      
    </ul>
  </div>
  <main
    class="ec-submenu__main"
  >
    <transition-group-stub
      appear="false"
      css="true"
      name="ec-submenu__fade"
      persisted="false"
      tag="div"
    >
      
      <div
        data-test="ec-submenu__panel-0"
      >
        
        
      </div>
      <div
        data-test="ec-submenu__panel-1"
        style="display: none;"
      >
        
        
      </div>
      <div
        data-test="ec-submenu__panel-2"
        style="display: none;"
      >
        
        
      </div>
      
    </transition-group-stub>
  </main>
</div>
`;
